--- a/tema4.html
+++ b/tema4.html
@@ -45,7 +45,18 @@
             </div>
         </div>
         <div>
-            <p>https://github.com/megr0001/frog_spil.git</p>
+            <p>I Tema 4 lærte vi om design, regler og konventioner. </p>
+            <ul>
+                <li>Titelskærm:
+                    - Er alt tilgængeligt for brugeren? Får vi lyst til at spille?</li>
+                <li> Slutskærm:
+                    - Hvis tabt, hvad får brugeren af info? Hvis vundet hvad er feedbacken til brugeren?</li>
+                <li> Infoskærm:
+                    - Hvordan viser du information/instruktioner om spillet?</li>
+            </ul>
+        </div>
+        <div>
+            <p>https://megr0001.github.io/frog_spil/spil.html</p>
         </div>
     </main>
     <footer>
