--- a/mig.html
+++ b/mig.html
@@ -40,7 +40,23 @@
             </div>
             <p>Mit navn er Melina, jeg er 23 år gammel og elsker at rejse og være kreativ</p>
         </div>
-
+        <div>
+            <p>
+                Jeg har lært en hel masse på det sidste halve år af det her semester, men jeg vil sige jeg har lært
+                endnu mere og fået bevist over for mig selv, at jeg kan finde ud af det meste af hvad vi har lært. Jeg
+                har nemlig
+                misset en del timer af undervisningen grundet stress og andre personlige årsager. Men med dette site,
+                som jeg har lavet helt fra bunden har jeg leget rundt med grids, farvekombinationer, konventioner og
+                meget andet og skabt et site jeg er virkelig stolt af!
+            </p>
+            <p>
+                Jeg var ret bange for at gå igang med det her fordi jeg nemlig havde misset det jeg havde, og jeg ikke
+                følte jeg havde styr på ting som grids, men har virkelig fået sat mig godt ind i det og føler nu jeg kan
+                meget mere end i starten, hvilket er det vigtigste for mig!
+            </p>
+            <p>Der er selvfølgelig også nogle ting jeg ikke har helt styr på endnu men jeg ser frem til 2. semester og
+                at gå mere i dybden med mange af tingene og lære nye ting!</p>
+        </div>
     </main>
     <footer>
         <h1 class="footer_text">Melina Kie Graff</h1>
