nye opdateringer til sitet

--- a/tema3.html
+++ b/tema3.html
@@ -72,7 +72,7 @@
                 <p class="p_ux">
                     UX research er processen af forståelse for brugeren og vi researcher
                     for at forstå brugerne.
-                    Vi ideudvikler og designer for at løse brugerens og virksomhedens behov og mål. Vi udvikler og
+                    Vi ideudvikler og designer, for at løse brugerens og virksomhedens behov og mål. Vi udvikler og
                     tester løsninger for at se om de virker i den virkelige verden.
                 </p>
             </div>
@@ -88,8 +88,7 @@
                     <li>Interview - handler om at få indsigter og dybdegående viden om brugere(n) gennem et velforberedt
                         interview.</li>
                     <li>Observation - handler om at indsamle viden og indsigter ved at observere en handling uden at
-                        deltage.
-                        aktivt. (fx få en du kender til at finde rundt på dit site uden at sige mere selv)</li>
+                        deltage aktivt. (fx få en du kender til at finde rundt på dit site uden at sige mere selv)</li>
                     <li>Survey - handler om at lave et godt spørgeskema med gode spørgsmål der sendes ud til relevante
                         brugere.
                     </li>
@@ -99,14 +98,13 @@
         <div class="kie_grid">
             <div>
                 <h3 class="h3_kie">Kie Design</h3>
-                <p class="p_kie">Jeg lavede mit eget website Kie Design ud fra en idé jeg havde for flere år siden. Det
-                    var da corona
-                    startede at jeg begyndte at lave smykker derhjemme og ville sælge dem, så jeg lavede en masse, tog
-                    billeder af dem og lavede en Instagram side til at sælge dem.</p>
+                <p class="p_kie">Jeg lavede mit eget website Kie Design ud fra en idé jeg havde for flere år siden. Jeg
+                    brugte både desk research og lavede også et spørgeskema til udviklingen af mit site her i tema 3.
+                </p>
                 <p class="p_kie">
                     Min userstory på hjemmesiden skulle have været noget i retning af: <i>"Som bruger vil jeg lægge
                         øreringe
-                        i kurven, som jeg kan bruge til en fest."</i> <br> Men da der ikke var nok tid og jeg er
+                        i kurven, som jeg kan bruge til en fest."</i> <br> Men da der ikke var nok tid og jeg
                     desværre ikke
                     god nok til at kode endnu til at lave en indkøbskurv osv på en hjemmeside. Så userstoryen blev
                     istedet:<br> <i>"Som bruger vil jeg se et eksempel på sølvøreringe til at få inspiration."</i>
