--- a/tema4.html
+++ b/tema4.html
@@ -36,7 +36,7 @@
         <div>
             <div>
                 <h1>Tema 4</h1>
-                <h2>Animation</h2>
+                <h2 class="h2_tema4">Animation</h2>
             </div>
             <div id="frog">
                 <div id="frog_element">
@@ -44,8 +44,71 @@
                 </div>
             </div>
         </div>
+        <div class="grid2_tema4">
+            <div class="pink_box_tema4">
+                <p>I Tema 4 lærte vi om design, regler og konventioner. Vi lærte også at bruge værktøjet Adobe
+                    Illustrator. Det her tema har helt klart været det sjoveste tema, da vi fik lov til at udfordre os
+                    selv meget på den kreative front med at udvikle et spil helt fra bunden med ideudvikling til
+                    udførelse og til et færdigt spil.</p>
+                <p>
+                    I mit spil "Hop'n'Hunt" skal man hjælpe frøen Flutter med at fange fluer og undgå de onde bier. Jeg
+                    nåede dog ikke at tilføje lyde på spillet.
+                </p>
+                <div>
+                    <a href="https://megr0001.github.io/frog_spil/spil.html" target="_blank" rel="noopener noreferrer">
+                        <button class="knap">Se Tema 4 site</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="grå_boks">
+            <h3>Konventioner</h3>
+            <p class="p_konventioner">Når man snakker om konventioner på et website, er det normalt at man fx har et
+                logo og menu oppe i
+                toppen. Præcis som jeg faktisk har udviklet mit site her, har vi, hvor man konventionelt også har logoet
+                i
+                øverste venstre hjørne og menuen i øverste højre side. Min menu går igen på alle mine undersider så det
+                er let og overskueligt at finde rundt på siden for enhver der besøger den.
+            </p>
+            <p class="p_konventioner">
+                Jeg har også lavet en footer. Ofte kan kontaktinformation og adresse findes i en footer, jeg har dog
+                nøjes med blot at skrive mit navn og lodt al information om mig stå på siden "Melina".
+            </p>
+        </div>
+        <div class="pink_boks_spil">
+            <h3>Spil & konventioner</h3>
+            <p>Når man snakker spil og designkonventioner går farver rigtig meget ind i den kategori da visse farver
+                viser nogle forskellige ting. For eksempel kan farver bruges til at illustrere informationer:</p>
+            <div class="liste">
+                <ul>
+                    <li>Blå: information</li>
+                </ul>
+                <ul>
+                    <li>Gul: advarsel</li>
+                </ul>
+                <ul>
+                    <li>Rød: nej, forbudt</li>
+                </ul>
+                <ul>
+                    <li>Grøn: ja, go</li>
+                </ul>
+            </div>
+        </div>
+        <div class="animationer_tema4">
+            <div class="animationerne">
+                <img class="animationer" src="billeder/bi-06.png" alt="bi">
+                <img class="animationer" src="billeder/flue-03.png" alt="flue">
+            </div>
+            <div>
+                <p class="p_animation">Som man kan se på mine animationer her, har jeg brugt farven rød i biens øjne for
+                    at vise at den er
+                    ond/dårlig at klikke på.</p>
+                <p class="p_animation">Og omvendt har jeg brugt at fluen har grønne nuancer i sig for at insinuere at
+                    den er god og det er
+                    den vi skal fange!</p>
+            </div>
+        </div>
         <div>
-            <p>I Tema 4 lærte vi om design, regler og konventioner. </p>
             <ul>
                 <li>Titelskærm:
                     - Er alt tilgængeligt for brugeren? Får vi lyst til at spille?</li>
@@ -54,9 +117,6 @@
                 <li> Infoskærm:
                     - Hvordan viser du information/instruktioner om spillet?</li>
             </ul>
-        </div>
-        <div>
-            <p>https://megr0001.github.io/frog_spil/spil.html</p>
         </div>
     </main>
     <footer>
