--- a/tema5.html
+++ b/tema5.html
@@ -37,20 +37,29 @@
             <h1>Tema 5</h1>
             <h2>Grundlæggende indhold</h2>
         </div>
-        <div>
-            <p>
-                I tema 5 lærte vi at bruge programmet Adobe Premiere Pro. Jeg endte dog med at have fået madforgiftning
-                da første uge i dette tema blev skudt i gang
-                og nåede derfor ikke at være til noget af undervisningen der og rejste den følgende uge med min
-                familie.
-            </p>
-            <p>I 3. uge kom jeg heldigvis ind i en fantastisk gruppe, hvor jeg føler jeg bidragede godt med
-                ideer til
-                udviklingen af det site de havde valgt at redesigne. Sitet hedder Vicuras, og je bidragede blandt andet
-                i designprocessen hvor vi i starten blev enige om nogle konventioner, så som hvordan menuen/headeren og
-                footeren skulle se ud og hvordan knapperne skulle se ud. Vi hjalp hinanden godt igennem, men hver især
-                stod vi for en side hver. Jeg stod for siden "Vores ydelser".
-            </p>
+        <div class="grid_vicuras">
+            <div>
+                <img class="vicuras" src="billeder/vicuras.png" alt="Vicuras">
+            </div>
+            <div>
+                <p>
+                    I tema 5 lærte vi at bruge programmet Adobe Premiere Pro. Jeg endte dog med at have fået
+                    madforgiftning
+                    da første uge i dette tema blev skudt i gang
+                    og nåede derfor ikke at være til noget af undervisningen der og rejste den følgende uge med min
+                    familie.
+                </p>
+                <p>I 3. uge kom jeg heldigvis ind i en fantastisk gruppe, hvor jeg føler jeg bidragede godt med
+                    ideer til
+                    udviklingen af det site de havde valgt at redesigne. Sitet hedder Vicuras, og je bidragede blandt
+                    andet
+                    i designprocessen hvor vi i starten blev enige om nogle konventioner, så som hvordan menuen/headeren
+                    og
+                    footeren skulle se ud og hvordan knapperne skulle se ud. Vi hjalp hinanden godt igennem, men hver
+                    især
+                    stod vi for en side hver. Jeg stod for siden "Vores ydelser".
+                </p>
+            </div>
         </div>
     </main>
     <footer>
