--- a/mig.html
+++ b/mig.html
@@ -38,29 +38,62 @@
                 <h1>Melina</h1>
                 <h2>Kie Graff</h2>
             </div>
-            <p>Mit navn er Melina, jeg er 23 år gammel og elsker at rejse og være kreativ</p>
+        </div>
+        <div class="elementer">
+            <div id="flyvemaskine">
+                <div id="flyvemaskine_sprite"></div>
+            </div>
         </div>
         <div>
-            <p>
-                Jeg har lært en hel masse på det sidste halve år af det her semester, men jeg vil sige jeg har lært
-                endnu mere og fået bevist over for mig selv, at jeg kan finde ud af det meste af hvad vi har lært. Jeg
-                har nemlig
-                misset en del timer af undervisningen grundet stress og andre personlige årsager. Men med dette site,
-                som jeg har lavet helt fra bunden har jeg leget rundt med grids, farvekombinationer, konventioner og
-                meget andet og skabt et site jeg er virkelig stolt af!
-            </p>
-            <p>
-                Jeg var ret bange for at gå igang med det her fordi jeg nemlig havde misset det jeg havde, og jeg ikke
-                følte jeg havde styr på ting som grids, men har virkelig fået sat mig godt ind i det og føler nu jeg kan
-                meget mere end i starten, hvilket er det vigtigste for mig!
-            </p>
-            <p>Der er selvfølgelig også nogle ting jeg ikke har helt styr på endnu men jeg ser frem til 2. semester og
-                at gå mere i dybden med mange af tingene og lære nye ting!</p>
+            <div class="pink_box_mig">
+                <p>
+                    Jeg har lært en hel masse på det sidste halve år af det her semester, men jeg vil sige jeg har lært
+                    endnu mere ved at lave denne her eksamen portfolio og fået bevist over for mig selv, at jeg kan
+                    finde ud
+                    af det meste af hvad vi har lært. Jeg
+                    har nemlig
+                    misset nogle timer af undervisningen grundet stress og andre personlige årsager. Men med dette
+                    site,
+                    som jeg har lavet helt fra bunden har jeg leget rundt med grids, farvekombinationer, konventioner og
+                    meget andet og skabt et site jeg er virkelig stolt af!
+                </p>
+            </div>
+            <div class="grå_box_mig">
+                <p>
+                    Jeg var ret bange for at gå igang med det her fordi jeg nemlig havde misset det jeg havde, og jeg
+                    ikke
+                    følte jeg havde styr på ting som grids, men har virkelig fået sat mig godt ind i det og føler nu jeg
+                    kan
+                    meget mere end i starten, hvilket er det vigtigste for mig!
+                </p>
+                <p>Der er selvfølgelig også nogle ting jeg ikke har helt styr på endnu men jeg ser frem til 2. semester
+                    og
+                    at gå mere i dybden med mange af tingene og lære nye ting!</p>
+            </div>
+        </div>
+        <h3>Kontakt mig</h3>
+        <div class="grid_kontakt">
+            <div>
+                <p>Ruten 16E, 2700 Brønshøj</p>
+                <p>+45 21 39 31 10</p>
+                <p>melinagraff@gmail.com</p>
+            </div>
+            <div>
+                <p>megr0001@stud.kea.dk</p>
+                <p>05. august 2000</p>
+                <p>SoMe: Melina Graff</p>
+            </div>
+        </div>
+        <div>
+            <video autoplay muted loop id="myVideo">
+                <source src="billeder/video/melina_YouTube.mp4" type="video/mp4">
+            </video>
         </div>
     </main>
-    <footer>
-        <h1 class="footer_text">Melina Kie Graff</h1>
-    </footer>
+    <script src="script.js"></script>
+    <!-- <footer> -->
+    <!-- <h1 class="footer_text">Melina Kie Graff</h1> -->
+    <!-- </footer> -->
 </body>
 
 </html>
