--- a/tema5.html
+++ b/tema5.html
@@ -42,23 +42,45 @@
                 <img class="vicuras" src="billeder/vicuras.png" alt="Vicuras">
             </div>
             <div>
-                <p>
-                    I tema 5 lærte vi at bruge programmet Adobe Premiere Pro. Jeg endte dog med at have fået
-                    madforgiftning
-                    da første uge i dette tema blev skudt i gang
-                    og nåede derfor ikke at være til noget af undervisningen der og rejste den følgende uge med min
-                    familie.
-                </p>
-                <p>I 3. uge kom jeg heldigvis ind i en fantastisk gruppe, hvor jeg føler jeg bidragede godt med
-                    ideer til
-                    udviklingen af det site de havde valgt at redesigne. Sitet hedder Vicuras, og je bidragede blandt
-                    andet
-                    i designprocessen hvor vi i starten blev enige om nogle konventioner, så som hvordan menuen/headeren
-                    og
-                    footeren skulle se ud og hvordan knapperne skulle se ud. Vi hjalp hinanden godt igennem, men hver
-                    især
-                    stod vi for en side hver. Jeg stod for siden "Vores ydelser".
-                </p>
+                <div class="pink_box_tema5">
+                    <h3 class="h3_premiere">Premiere Pro</h3>
+                    <p>
+                        I tema 5 lærte vi at bruge programmet Adobe Premiere Pro. Jeg endte dog med at have fået
+                        madforgiftning
+                        da første uge i dette tema blev skudt i gang
+                        og nåede derfor ikke at være til noget af undervisningen der og rejste den følgende uge med min
+                        familie. Jeg har dog eterfølgende prøvet at lære programmet selv.
+                    </p>
+                    <p>I 3. uge kom jeg heldigvis ind i en fantastisk gruppe, hvor jeg føler jeg bidragede godt med
+                        ideer til
+                        udviklingen af det site de havde valgt at redesigne. Sitet hedder Vicuras, og jeg bidragede
+                        blandt andet i designprocessen hvor vi i starten blev enige om nogle konventioner, så som
+                        hvordan
+                        menuen/headeren og footeren skulle se ud og hvordan knapperne skulle se ud. Vi hjalp hinanden
+                        godt igennem, men
+                        hver især
+                        stod vi for en side hver. Jeg stod for siden "Vores ydelser" som man kan se i prototypen af
+                        siden
+                        her til venstre.
+                    </p>
+                </div>
+                <div class="grå_boks_tema5">
+                    <h4>Github</h4>
+                    <p>I dette tema lærte vi også at bruge Github, så hvert teammedlem kunne arbejde på hvert sit site
+                        på en gang fra hver sin computer. Det virkede super godt under tema 5, jeg har dog desværre haft
+                        nogle problemer med at uploade under vores eksamenperiode her.</p>
+                </div>
+                <div class="hvid_box">
+                    <p>Nedenunder her kan du klikke dig videre til vores færdige redesignede site. Vi gjorde sitet meget
+                        mere brugervenligt ved at fjerne en masse undersider og klik der gjorde siden uoverskuelig og
+                        hvor man følte man kørte i loop hele tiden</p>
+                    <div>
+                        <a href="https://github.com/SaraLarsen02/website_vicuras.git" target="_blank"
+                            rel="noopener noreferrer">
+                            <button class="knap knap_pink">Se Tema 5 site</button>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
